project (probe-dll-export)

#SET(CMAKE_FIND_LIBRARY_SUFFIXES ".lib")
#SET(BUILD_SHARED_LIBRARIES OFF)
#SET(CMAKE_EXE_LINKER_FLAGS "-static")
#SET(MSVC_RUNTIME "static")

SET("CMAKE_C_FLAGS_DEBUG" "/D_DEBUG /MTd /Zi  /Ob0 /Od /RTC1")
SET("CMAKE_C_FLAGS_MINSIZEREL" "/MT /O1 /Ob1 /D NDEBUG")
SET("CMAKE_C_FLAGS_RELEASE" "/MT /O2 /Ob2 /D NDEBUG")
SET("CMAKE_C_FLAGS_RELWITHDEBINFO" "/MT /Zi /O2 /Ob1 /D NDEBUG")
SET("CMAKE_CXX_FLAGS_DEBUG" "/D_DEBUG /MTd /Zi /Ob0 /Od /RTC1")
SET("CMAKE_CXX_FLAGS_MINSIZEREL" "/MT /O1 /Ob1 /D NDEBUG")
SET("CMAKE_CXX_FLAGS_RELEASE" "/MT /O2 /Ob2 /D NDEBUG")
SET("CMAKE_CXX_FLAGS_RELWITHDEBINFO" "/MT /Zi /O2 /Ob1 /D NDEBUG")

add_executable(probe-dll-export WIN32 main.cpp)
